Bug 64873 - [bug] Launching weston does not unblank the display
Summary: [bug] Launching weston does not unblank the display
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-22 16:10 UTC by Brian Lovin
Modified: 2013-06-17 16:15 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Brian Lovin 2013-05-22 16:10:44 UTC
System Environment:
--------------------------
Distro: Ubuntu 12.04
Arch: x86_64
wayland (master) heads/master-0-g508dd69
fontconfig (master) 2.10.93-0-g8d54091
drm (master) heads/master-0-g8a88e34
mesa (master) heads/master-0-gff68f61
libxkbcommon (master) heads/master-0-ga392d26
pixman (master) heads/master-0-g2320f05
cairo (master) heads/master-0-g631bf29
weston (master) heads/master-0-gfe097f9
harfbuzz (master) heads/master-0-g6015263
glib (master) heads/master-0-gc9cc0be
atk (master) heads/master-0-gc71edfa
efl (master) heads/master-0-g3c618e5
elementary (master) heads/master-0-gc5c04e3
wfits (master) heads/master-0-g4377115

Detailed Description:
-----------------------------
If a screen is blanked (left to sit long enough for the timeout to take effect), and weston or weston-launch is executed, the screen is not unblanked.
That is to say, weston will launch and run but it will display nothing on the screen.


Steps to Reproduce:
----------------------------
1. Blank the terminal
 * From the terminal (tt1 or CTRL+ALT+F1) execute "setterm -blank force"
2. SSH into the machine and run weston or weston-launch
3. Observe bug.

Note that X11 does wake up the display, so this is just not on par with X.
Comment 1 Brian Lovin 2013-05-22 16:15:56 UTC
Also note that on some hardware with very deep sleep states (ivybridge specifically) when Weston is launched the following error is observed:
[14:26:17.489] queueing pageflip failed: Invalid argument
Comment 2 Ander Conselvan de Oliveira 2013-05-28 08:57:54 UTC
This seems to be a kernel issue. Can you test if the compiling it from the following tree fixes it for you?

git://people.freedesktop.org/~danvet/drm-intel drm-intel-fixes

The following commit on that tree should fix it:

commit	e3de42b68478a8c95dd27520e9adead2af9477a5
Author:	Imre Deak <imre.deak@intel.com>
Date:	2013-05-03 17:44:07 (GMT)

drm/i915: force full modeset if the connector is in DPMS OFF mode
Comment 3 U. Artie Eoff 2013-06-17 16:15:53 UTC
The workaround in http://cgit.freedesktop.org/wayland/weston/commit/?id=722a2d523c90c2315121ddff6a001de2fe6965e6 resolves this issue.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.